# sportradar-soccer-api

./: README.md  pyproject.toml  requirements.txt  setup.py
sportradar_soccer_api/: __init__.py  sportradar.py  utils.py
